--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -15,12 +16,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MovaApp"
         tools:targetApi="31">
-        <activity
-            android:name=".dialog.CalendarDialog"
-            android:exported="false" />
-        <activity
-            android:name=".FlightItems"
-            android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="true">
@@ -35,6 +30,9 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.MovaApp.NoActionBar" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAgjr4tUK3ENN_5S7cT8wD6Rfe1MFhBbEQ" />
     </application>
 
 </manifest>
